Fix minor playback bugs
It was best to call soundcloud 'play' in the callback. Also the youtube
iframe started to play up if it was in a hidden div (not playing), so instead
I've positioned it off-screen instead.

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -58,6 +58,11 @@ body, html {
   margin-left: 14px;
 }
 
+.offscreen {
+  margin-left: -9999px;
+  position: absolute;
+}
+
 .playerinfo {
   margin-bottom: -20px;
   overflow: hidden;
